org.aion.avm.core/test/org/aion/avm/core/rejection/RejectClassNameWhichIsWaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaayTooLong.java
package org.aion.avm.core.rejection;


/**
 * This should be returned since the name is longer than our limit.
 */
public class RejectClassNameWhichIsWaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaayTooLong {
    public static byte[] main() {
        return new byte[0];
    }
}
